--- a/app/views/access/index.html.erb
+++ b/app/views/access/index.html.erb
@@ -2,12 +2,12 @@
 
 <div class="menu">
 	<h2>Admin Menu</h2>
-	<div class="identity">Logged is as:</div>
+	<div class="identity">Logged is as: <%= session[:username] %></div>
 	<ul>
 		<li><%= link_to("Manage Subject", :controller => 'subjects') %></li>
 		<li><%= link_to("Manage Pages", :controller => 'pages') %></li>
 		<li><%= link_to("Manage Sections", :controller => 'sections') %></li>
-		<li><%= link_to("Manage Admin Users", :controller => '#') %></li>
+		<li><%= link_to("Manage Admin Users", :controller => 'admin_users') %></li>
 		<li><%= link_to("Logout", :controller => 'logout') %></li>
 	</ul>
 </div>
