--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "Show Pages" %>
-<%= link_to("<< back to List", {:action => 'index'}, :class => 'back-link') %>
+<%= link_to("<< back to List", {:action => 'index', :subject_id => @subject.id}, :class => 'back-link') %>
 
 <div class="pages show">
 	<h2>Show Page</h2>
