--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,5 +1,8 @@
 <% @page_title = "Sections" %>
 
+<%= link_to("<< Back to Pages", {:controller => 'pages', :action => 'index',
+	:subject_id => @page.subject_id}, :class => 'back-link') %>
+
 <div class="sections index">
 	<h2>Sections</h2>
 
@@ -22,9 +25,9 @@
 			<td><%=section.content_type %></td>
 			<td class="center"><%= status_tag(section.visible) %></td>
 			<td class="actions">
-				<%= link_to("Show", {:action => 'show', :id => section.id}, :class => 'action show') %>
-				<%= link_to("Edit", {:action => 'edit', :id => section.id}, :class => 'action edit') %>
-				<%= link_to("Delete", {:action => 'delete', :id => section.id}, :class => 'action delete') %>
+				<%= link_to("Show", {:action => 'show', :id => section.id, :subject_id => @subject_id}, :class => 'action show') %>
+				<%= link_to("Edit", {:action => 'edit', :id => section.id, :subject_id => @subject_id}, :class => 'action edit') %>
+				<%= link_to("Delete", {:action => 'delete', :id => section.id, :subject_id => @subject_id}, :class => 'action delete') %>
 			</td>
 		</tr>
 		<% end %>
