--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,5 +1,5 @@
 <% @page_title = "Show Sections" %>
-<%= link_to("<< back to List", {:action => 'index'}, :class => 'back-link') %>
+<%= link_to("<< back to List", {:action => 'index', :page_id => @page.id}, :class => 'back-link') %>
 
 <div class="sections show">
 	<h2>Show Section</h2>
