--- a/app/views/access/index.html.erb
+++ b/app/views/access/index.html.erb
@@ -6,6 +6,6 @@
 	<ul>
 		<li><%= link_to("Manage Content", :controller => 'subjects') %></li>
 		<li><%= link_to("Manage Admin Users", :controller => 'admin_users') %></li>
-		<li><%= link_to("Logout", :controller => 'logout') %></li>
+		<li><%= link_to("Logout", :action => 'logout') %></li>
 	</ul>
 </div>
